--- a/src/Shared/MyRecipeBook.Exceptions/ResourceMessagesExceptions.resx
+++ b/src/Shared/MyRecipeBook.Exceptions/ResourceMessagesExceptions.resx
@@ -28,6 +28,9 @@
         <value>The email addres is invalid</value>
     </data>
     <data name="PASSWORD_EMPTY" xml:space="preserve">
-        <value>The password must be than 9 caracters</value>
+        <value>The password must be than 8 caracters</value>
+    </data>
+    <data name="UNKNOWN_ERROR" xml:space="preserve">
+        <value>Unknown error</value>
     </data>
 </root>
